@@ -47,9 +47,9 @@ def _sanitizeURLs(text_seq):
     """
     # This regular expression will be used to remove authentication
     # credentials from URLs.
-    password_re = re.compile('://([^:]+:[^@]+@)(\S+)')
+    password_re = re.compile(r'://([^:]+:[^@]+@)(\S+)')
     # Snap proxy passwords are UUIDs.
-    snap_proxy_auth_re = re.compile(',proxyauth=[^:]+:[A-Za-z0-9-]+')
+    snap_proxy_auth_re = re.compile(r',proxyauth=[^:]+:[A-Za-z0-9-]+')
 
     for line in text_seq:
         sanitized_line = password_re.sub(r'://\2', line)
