@@ -6,6 +6,7 @@ launchpad-buildd (190) UNRELEASED; urgency=medium
   * Work around /proc/self/fd-related test hang on Python >= 3.3.
   * Adjust tests to avoid making assumptions about dict iteration order.
   * Open temporary files in text mode in more cases.
+  * Ensure that regex patterns with \-escapes are raw strings.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 28 Apr 2020 10:19:27 +0100
 
